...

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/save_summary_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
...
