<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundx"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/signup_name"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="360dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/signup_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="432dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/signup_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="492dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/signup_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="664dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_confirm_password"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="556dp"
        android:ems="10"
        android:hint="Confrim password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="268dp"
        android:layout_marginTop="676dp"
        android:text="Already a member?\nLogin"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:layout_marginTop="600dp"
        android:text="Sign up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="415dp"
        android:layout_height="328dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/p_extrabold"
        android:gravity="center"
        android:text="S"
        android:textColor="@color/white"
        android:textColorHighlight="#509EDD"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="304dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/p_light"
        android:text="Register"
        android:textColor="#ffffff"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/signup_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>