...
      android:hint="Password"
      android:inputType="textPassword"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/login_register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="284dp"
      android:layout_marginTop="680dp"
      android:fontFamily="@font/p_light"
      android:text="New here? \nRegister"
...
